# LibsoundioExp

./: .gitignore  CMakeLists.txt  main.cpp  test.c
include/: Utils.hpp
include/node/: Micro.hpp  Mix.hpp  Node.hpp  Output.hpp  Wave.hpp
include/node/io/: Field.hpp  IO.hpp  Type.hpp
src/: Utils.cpp
src/node/: Micro.cpp  Mix.cpp  Output.cpp  Wave.cpp
